--- a/index.html
+++ b/index.html
@@ -3,16 +3,70 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Project</title>
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <title>Project | Chocolate</title>
 </head>
 
 <body>
-    start
+    <div id="main">
+        <nav>
+            <a href="#">Logo</a>
 
-    <script src="./assets/js/main.js"></script>
+            <div class="cntr-nav">
+                <a href="#">Home</a>
+                <a href="#">Products</a>
+                <a href="#">Shop</a>
+                <a href="#">Contact</a>
+            </div>
+
+            <i class="ri-search-line"></i>
+        </nav>
+
+        <div class="header">
+            <h1>Naturalist</h1>
+            <img id="choclate" src="assets/images/choclate.png" alt="">
+            <img id="can" src="assets/images/can.png" alt="">
+            <img id="choclate2" src="assets/images/choclate2.png" alt="">
+            <img id="almod" src="assets/images/almod.png" alt="">
+            <img id="almod2" src="assets/images/almod2.png" alt="">
+        </div>
+
+        <div class="about">
+            <div class="about-left">
+                <img src="assets/images/choclate3.png">
+            </div>
+
+            <div class="about-right">
+                <h1>Flavour Updated</h1>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam, excepturi sed, itaque placeat id
+                    natus soluta veniam obcaecati qui a laborum laboriosam dolorem illum labore sit, voluptates commodi
+                    neque dolores tempore temporibus deleniti? Nobis, ratione hic error quis cum neque nulla laudantium
+                    nostrum sit nihil dolorum quisquam enim quaerat, eaque ex sequi, harum totam quia non! Labore,
+                    neque! Amet voluptatem illo similique recusandae! Ex quaerat quibusdam asperiores, ducimus tempore
+                    magni labore. Tenetur voluptas, quos ex repellendus provident mollitia laboriosam adipisci alias a
+                    impedit, cum accusamus rerum delectus eaque facilis veniam quia laborum incidunt ea assumenda! Eos
+                    magni aspernatur quod distinctio.
+                </p>
+            </div>
+        </div>
+
+        <div class="product">
+            <img src="assets/images/footer1.jpg">
+        </div>
+    </div>
+
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"
+        integrity="sha512-16esztaSRplJROstbIIdwX3N97V1+pZvV33ABoG1H2OyTttBxEGkTsoIVsiP1iaTtM8b3+hu2kB6pQ4Clr5yug=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"
+        integrity="sha512-Ic9xkERjyZ1xgJ5svx3y0u3xrvfT/uPkV99LBwe68xjy/mGtO+4eURHZBW2xW4SZbFrF1Tf090XqB+EVgXnVjw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+    <script src="assets/js/main.js"></script>
 </body>
 
 </html>
